/*
 * $Id: Changelog,v 1.14 2004/04/27 18:06:29 rodrigo_moreno Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-30 15:00 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  + postgres.ch
    + Add new file with database definitions
  * TPostgres.prg
    * Changed fieldget parameters, fixed bug when parameter field is char
  * tests/simple.prg
  * tests/stress.prg
  * tests/test.prg
    ! Fix some bugs
  * tests/dbf2pg.prg
    ! Add new features and new parameter, like use transaction, commit interval, etc.    
  
2004-04-25 14:33 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * TPostgres.prg
    ! Fixed (INSERT, DELETE, UPDATE) result error when row is updated

2004-04-25 14:33 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * TPostgres.prg
    ! Fixed schema bugs 

2004-04-25 16:00 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * postgres.c
    + Add new function to handle error message
    * Changed pointer functions
  * TPostgres.prg
    + Add Schema support
    ! Some fix and improve initial query
  * tests/test.prg
    ! Changed sample to handle connection and result messages
    
2004-04-05 14:45 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * postgres.c
    + Add new functions to handle connection and result set
    * Changed pointer return
    
  * TPostgres.prg
    * Changed to handle the status of connection and querys 
    * Changed Fieldget, Fieldtype, Fielddec, Fieldlen, to handle char field name

2004-03-12 14:45 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * TPostgres.prg
    * Method Fieldget, fixed problem text field with null

2004-03-06 10:50 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * TPostgres.prg
    * Changed DataToSql, when empty date, should return null 
      * Contributed by Joao Fonseca
